# beer

./: .gitignore  README.md  circuits.ipynb  initial_trials.ipynb  logical_rel.ipynb  pyproject.toml  requirements.txt  slurm-354671.out  transcoder_training.py
lightning_logs/version_19/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_9/: metrics.csv
old/: batch_transcoder_training.sh  initial_trials.ipynb  transcoder_training.py
src/mbeer/: __init__.py  baseline_functions.py  mbrd.py  new_layers.py  pullback.py  scoring.py  utils.py
tests/: model_tests.ipynb  scoring-a100-80.sh  scoring-big-models.sh  scoring-p6000.sh  scoring.sh  test_utils.py  viz.ipynb
