[project]
name = "mbeer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "parametric-umap (>=0.1.2,<0.2.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "bertviz (>=1.4.1,<2.0.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "circuit-tracer @ file:///Users/davide-r/Projects/mbeer/circuit-tracer",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "lightning (>=2.5.6,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mbeer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
