[project]
name = "mbeer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.1,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "mbeer", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu130"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
